// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for gainsight-px-cloud-action destination: groupIdentify action - all fields 1`] = `
Object {
  "anonymousId": "0Y5fdRfbP(ju)&u9&n&l",
  "context": Object {
    "app": Object {},
    "campaign": Object {},
    "device": Object {
      "testType": "0Y5fdRfbP(ju)&u9&n&l",
    },
    "ip": "0Y5fdRfbP(ju)&u9&n&l",
    "library": Object {},
    "locale": "0Y5fdRfbP(ju)&u9&n&l",
    "location": Object {},
    "network": Object {
      "testType": "0Y5fdRfbP(ju)&u9&n&l",
    },
    "page": Object {},
    "screen": Object {},
    "userAgent": "0Y5fdRfbP(ju)&u9&n&l",
  },
  "groupId": "0Y5fdRfbP(ju)&u9&n&l",
  "messageId": "0Y5fdRfbP(ju)&u9&n&l",
  "receivedAt": "2021-02-01T00:00:00.000Z",
  "sentAt": "2021-02-01T00:00:00.000Z",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "traits": Object {
    "testType": "0Y5fdRfbP(ju)&u9&n&l",
  },
  "type": "0Y5fdRfbP(ju)&u9&n&l",
  "userId": "0Y5fdRfbP(ju)&u9&n&l",
  "version": 85171310669332.48,
}
`;

exports[`Testing snapshot for gainsight-px-cloud-action destination: groupIdentify action - required fields 1`] = `
Object {
  "context": Object {},
  "groupId": "0Y5fdRfbP(ju)&u9&n&l",
  "messageId": "0Y5fdRfbP(ju)&u9&n&l",
  "receivedAt": "2021-02-01T00:00:00.000Z",
  "sentAt": "2021-02-01T00:00:00.000Z",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "traits": Object {
    "testType": "0Y5fdRfbP(ju)&u9&n&l",
  },
  "type": "0Y5fdRfbP(ju)&u9&n&l",
  "userId": "0Y5fdRfbP(ju)&u9&n&l",
}
`;

exports[`Testing snapshot for gainsight-px-cloud-action destination: identifyUser action - all fields 1`] = `
Object {
  "anonymousId": "#(PG2cZ2",
  "context": Object {
    "app": Object {},
    "campaign": Object {},
    "device": Object {
      "testType": "#(PG2cZ2",
    },
    "ip": "#(PG2cZ2",
    "library": Object {},
    "locale": "#(PG2cZ2",
    "location": Object {},
    "network": Object {
      "testType": "#(PG2cZ2",
    },
    "page": Object {},
    "screen": Object {},
    "userAgent": "#(PG2cZ2",
  },
  "messageId": "#(PG2cZ2",
  "receivedAt": "2021-02-01T00:00:00.000Z",
  "sentAt": "2021-02-01T00:00:00.000Z",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "traits": Object {
    "testType": "#(PG2cZ2",
  },
  "type": "#(PG2cZ2",
  "userId": "#(PG2cZ2",
  "version": -55118145655930.88,
}
`;

exports[`Testing snapshot for gainsight-px-cloud-action destination: identifyUser action - required fields 1`] = `
Object {
  "context": Object {},
  "messageId": "#(PG2cZ2",
  "receivedAt": "2021-02-01T00:00:00.000Z",
  "sentAt": "2021-02-01T00:00:00.000Z",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "traits": Object {
    "testType": "#(PG2cZ2",
  },
  "type": "#(PG2cZ2",
  "userId": "#(PG2cZ2",
}
`;

exports[`Testing snapshot for gainsight-px-cloud-action destination: trackEvent action - all fields 1`] = `
Object {
  "anonymousId": "1@PnHg#3fPPGqa8#",
  "context": Object {
    "app": Object {},
    "campaign": Object {},
    "device": Object {
      "testType": "1@PnHg#3fPPGqa8#",
    },
    "ip": "1@PnHg#3fPPGqa8#",
    "library": Object {},
    "locale": "1@PnHg#3fPPGqa8#",
    "location": Object {},
    "network": Object {
      "testType": "1@PnHg#3fPPGqa8#",
    },
    "page": Object {},
    "screen": Object {},
    "userAgent": "1@PnHg#3fPPGqa8#",
  },
  "event": "1@PnHg#3fPPGqa8#",
  "messageId": "1@PnHg#3fPPGqa8#",
  "properties": Object {
    "testType": "1@PnHg#3fPPGqa8#",
  },
  "receivedAt": "2021-02-01T00:00:00.000Z",
  "sentAt": "2021-02-01T00:00:00.000Z",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "type": "1@PnHg#3fPPGqa8#",
  "userId": "1@PnHg#3fPPGqa8#",
  "version": 37162977119436.8,
}
`;

exports[`Testing snapshot for gainsight-px-cloud-action destination: trackEvent action - required fields 1`] = `
Object {
  "context": Object {},
  "event": "1@PnHg#3fPPGqa8#",
  "messageId": "1@PnHg#3fPPGqa8#",
  "receivedAt": "2021-02-01T00:00:00.000Z",
  "sentAt": "2021-02-01T00:00:00.000Z",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "type": "1@PnHg#3fPPGqa8#",
  "userId": "1@PnHg#3fPPGqa8#",
}
`;

exports[`Testing snapshot for gainsight-px-cloud-action destination: trackPageView action - all fields 1`] = `
Object {
  "anonymousId": "RTVb9BnJYZ3IX[",
  "context": Object {
    "app": Object {},
    "campaign": Object {},
    "device": Object {
      "testType": "RTVb9BnJYZ3IX[",
    },
    "ip": "RTVb9BnJYZ3IX[",
    "library": Object {},
    "locale": "RTVb9BnJYZ3IX[",
    "location": Object {},
    "network": Object {
      "testType": "RTVb9BnJYZ3IX[",
    },
    "page": Object {},
    "screen": Object {},
    "userAgent": "RTVb9BnJYZ3IX[",
  },
  "messageId": "RTVb9BnJYZ3IX[",
  "name": "RTVb9BnJYZ3IX[",
  "properties": Object {
    "path": "RTVb9BnJYZ3IX[",
    "referrer": "RTVb9BnJYZ3IX[",
    "title": "RTVb9BnJYZ3IX[",
    "url": "RTVb9BnJYZ3IX[",
  },
  "receivedAt": "2021-02-01T00:00:00.000Z",
  "sentAt": "2021-02-01T00:00:00.000Z",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "type": "RTVb9BnJYZ3IX[",
  "userId": "RTVb9BnJYZ3IX[",
  "version": 13437301539471.36,
}
`;

exports[`Testing snapshot for gainsight-px-cloud-action destination: trackPageView action - required fields 1`] = `
Object {
  "context": Object {},
  "messageId": "RTVb9BnJYZ3IX[",
  "name": "RTVb9BnJYZ3IX[",
  "properties": Object {},
  "receivedAt": "2021-02-01T00:00:00.000Z",
  "sentAt": "2021-02-01T00:00:00.000Z",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "type": "RTVb9BnJYZ3IX[",
  "userId": "RTVb9BnJYZ3IX[",
}
`;
